--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nalgebra = "0.32.5"
+eframe = "0.28.1"
+egui = "0.28.1"
+epaint = "0.28.1"
+image = "0.25.2"
+nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
 plotters = "0.3.5"
 rand = "0.8.5"
+rand_distr = "0.4.3"
+ron = "0.8.1"
+serde = { version = "1.0.209", features = ["derive"] }
+serde-pickle = "1.1.1"
